Add reviewed versions of notebooks

--- a/notebooks/coding/Dictionaries.ipynb
+++ b/notebooks/coding/Dictionaries.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "# Dictionaries\n",
-    "Dictionaries are a Python class that can store data as key-value pairs. The syntax is:\n",
+    "A dictionary is a Python data structure that can store data as key-value pairs. The syntax is:\n",
     "\n",
     "    dict1 = {key1: value1, key2: value2, key3: value3, etc...}\n",
-    "Keys can be strings or numbers, values can be anything - strings, numbers, lists, arrays, etc. Keys must be unique, if you set it twice, the second value replaces first."
+    "Keys can be strings or numbers and values can be anything: strings, numbers, lists, arrays, etc. Keys must be unique - if you set it twice, the second value replaces the first."
    ]
   },
   {
@@ -25,7 +25,9 @@
     }
    ],
    "source": [
-    "rocks_dict = {\"basalt\": 1, \"granite\": 2, \"marl\": 3, \"gneiss\": 4, \"shale\": 5}\n",
+    "rocks_dict = {\"basalt\": 1, \"granite\": 2,\n",
+    "              \"marl\": 3, \"gneiss\": 4, \n",
+    "              \"shale\": 5}\n",
     "print(rocks_dict)"
    ]
   },
@@ -57,7 +59,7 @@
     "# Access value with key 'basalt'\n",
     "print(rocks_dict[\"basalt\"])\n",
     "\n",
-    "# Create a new key sandstone with value 6\n",
+    "# Create a new key 'sandstone' with value 6\n",
     "rocks_dict[\"sandstone\"] = 6\n",
     "print(rocks_dict)\n",
     "\n",
