--- a/notebooks/coding/Flow_control_statements.ipynb
+++ b/notebooks/coding/Flow_control_statements.ipynb
@@ -7,14 +7,14 @@
     "# Flow control statements\n",
     "## Break and continue statements\n",
     "\n",
-    "The _break_ and _continue_ statements are used in loops (_while_ or _for_) to modify behaviour of the loop. _break_ ends the loop, while _continue_ ends the specific iteration and comes back to the next element.\n",
+    "The _break_ and _continue_ statements are used in loops (_while_ or *for*) to modify behaviour of the loop. _break_ ends the loop, while _continue_ ends the current iteration and continues onto the next one.\n",
     "\n",
     "Example use of _break_ statement:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,12 +28,12 @@
    "source": [
     "counter = 0\n",
     "\n",
-    "while True: # Create and infinite loop\n",
+    "while True: # Create an infinite loop\n",
     "    \n",
     "    counter += 1\n",
     "    \n",
     "    if counter > 29:\n",
-    "        break # Exit the loop if counter is at 30 or more\n",
+    "        break # Exit the loop if counter is 30 or more\n",
     "        \n",
     "print(counter)"
    ]
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,13 +111,6 @@
     "        \n",
     "    print(i)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
