--- a/notebooks/coding/For_loops.ipynb
+++ b/notebooks/coding/For_loops.ipynb
@@ -17,29 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 3, 5, 7, 9, 11]\n",
-      "6\n",
-      "8\n",
-      "10\n",
-      "12\n",
-      "14\n",
-      "16\n",
-      "[1, 3, 5, 7, 9, 11]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_list = [1, 3, 5, 7, 9, 11]\n",
     "print(my_list)\n",
     "\n",
-    "for element in my_list:   # For each element in my_list, add 5 and print it\n",
+    "# For each element in my_list, add 5 and print it\n",
+    "\n",
+    "for element in my_list:\n",
     "    element = element + 5\n",
     "    print(element)\n",
     "\n",
@@ -50,16 +37,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apart from looping over elements, _for_ loops can be created for specified number of iterations using _range()_ function. The syntax for _range()_ is:\n",
+    "Apart from looping over elements, _for_ loops can be created for specified number of iterations using the _range()_ function. The syntax for _range()_ is:\n",
     "\n",
-    "    range(start, stop, [step])\n",
+    "    range([start], stop, [step])\n",
     "    \n",
-    "This generates sort of a list with elements between start and stop, excluding stop. If step (increment) is not provided, every number is generated. If you use only one argument, _range(5)_ treats it as a stop value. "
+    "This generates sort of a list with elements between start and stop, excluding stop. If step (increment) is not provided, every number is generated. If you use only one argument, _range(5)_ treats it as a stop value and it starts from 0."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -125,12 +112,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can generate index with _range()_ function to loop over elements in a list:"
+    "We can generate an index with _range()_ function to loop over elements in a list:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -158,16 +145,14 @@
    "source": [
     "## Exercise:\n",
     "\n",
-    "Fahrenheit-Celsius conversion is:\n",
+    "Create a _for_ loop to find Celsius temperatures for Fahrenheit temperatures between 20$^\\circ$F and 80$^\\circ$F at 5$^\\circ$F increments. The Fahrenheit-Celsius conversion formula is:\n",
     "\n",
-    "$$ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32) $$\n",
-    "\n",
-    "Create a _for_ loop to find Celsius temperatures for Fahrenheit temperature between 20$^\\circ$F and 80$^\\circ$F at 5$^\\circ$F increments."
+    "$$ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32) $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
