--- a/notebooks/coding/Functions.ipynb
+++ b/notebooks/coding/Functions.ipynb
@@ -6,20 +6,20 @@
    "source": [
     "# Custom functions\n",
     "\n",
-    "Functions in Python are blocks of code that will be only executed, when called. They look:\n",
+    "Functions in Python are blocks of code that will only be executed when called. They look like this:\n",
     "\n",
     "    def function_name(arg1, arg2, ...):\n",
     "        # some code to execute\n",
     "        return # return some variables, optional\n",
     "\n",
-    "Function names should be descriptive. The arguments are separateed by commas and will become local variables within the function. Any object can be returned from a function, also multiple objects are allowed to be returned.\n",
+    "Function names should be descriptive. The arguments are separated by commas and will become local variables within the function. Any object, and any number of objects, can be returned from a function.\n",
     "\n",
-    "Functions have to be in the code before you execute them:"
+    "Functions have to appear in the code before you execute them:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -52,12 +52,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even though we have in the code variables a and b, the function does not use them, if they are not arguments. 'a' and 'b' inside the function are local variables and they only exist there. If we want to use global variables, the code will look:"
+    "Even though we have variables a and b in the code, the function does not use them unless they are arguments to the function. Variables 'a' and 'b' inside the function are local variables and they only exist there. If we want to use global variables (variables outside of the function), the code will look like this:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
