--- a/notebooks/coding/Handling_errors.ipynb
+++ b/notebooks/coding/Handling_errors.ipynb
@@ -9,10 +9,9 @@
     "When an _error_ occurs in Python, an _exception_ is _raised_. \n",
     "\n",
     "## Error types\n",
-    "Full list of built in exceptions is available here:\n",
-    "https://docs.python.org/3/library/exceptions.html#concrete-exceptions\n",
+    "The full list of built-in exceptions is available in the [documentation](https://docs.python.org/3/library/exceptions.html#concrete-exceptions).\n",
     "\n",
-    "For example, when we create a tuple with four elements and want to print a 5th element, we get this error message:\n",
+    "For example, when we create a tuple with only four elements and want to print the 5th element, we get this error message:\n",
     "\n",
     "    flower_names = (\"iris\",\n",
     "                    \"poppy\",\n",
@@ -64,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
