--- a/notebooks/coding/List_comprehensions.ipynb
+++ b/notebooks/coding/List_comprehensions.ipynb
@@ -10,12 +10,12 @@
     "\n",
     "    some_list = [ expression for item in some_iterable if condition]\n",
     "    \n",
-    "This will generate a list based with an expression based on items in 'some_iterable', if the condition is met. The 'if' condition is optional."
+    "This will generate a list with an expression based on items in 'some_iterable', if the condition is met. The 'if' condition is optional."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -55,12 +55,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Expression in list comprehension can be anything, the same value for each item, a string:"
+    "The expression in list comprehension can be anything, the same value for each item, a string...:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,8 +103,8 @@
    ],
    "source": [
     "# List comprehension with if statement\n",
-    "# number%2 == 1 means to search for numbers that\n",
-    "# when divided by 2, give whole number + 1 (odd numbers)\n",
+    "# number%2 == 1 means to search for numbers whose \n",
+    "# remainder from division by 2 is 1 (odd numbers)\n",
     "\n",
     "odd_numbers = [ number for number in range(20) if number%2 == 1]\n",
     "\n",
@@ -127,16 +127,14 @@
    "source": [
     "## Exercise:\n",
     "\n",
-    "Fahrenheit-Celsius conversion is:\n",
+    "Create a list comprehension to find Celsius temperatures for Fahrenheit temperatures between 20$^\\circ$F and 80$^\\circ$F at 5$^\\circ$F increments. The Fahrenheit-Celsius conversion formula is:\n",
     "\n",
-    "$$ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32) $$\n",
-    "\n",
-    "Create a list comprehension to find Celsius temperatures for Fahrenheit temperature between 20$^\\circ$F and 80$^\\circ$F at 5$^\\circ$F increments."
+    "$$ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32) $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
