--- a/notebooks/coding/Nested_lists.ipynb
+++ b/notebooks/coding/Nested_lists.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "# Nested lists\n",
-    "Lists can contain elements, which can be another lists."
+    "Lists can contain elements which are also lists."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -40,12 +40,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Above, we created a table with rows. Using _zip()_ function we can create a table with columns:"
+    "Above, we created a table with rows. Using _zip()_ function we can loop through two or more lists at the same time. With that we can create a table with columns:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
