--- a/notebooks/coding/Pandas.ipynb
+++ b/notebooks/coding/Pandas.ipynb
@@ -187,7 +187,7 @@
    "metadata": {},
    "source": [
     "## Reading files\n",
-    "Most of the time, we will be using data in different file formats, rather than manually creating a dataframe. Pandas have a very easy syntax for reading files:\n",
+    "Most of the time we will want to load data in different file formats, rather than manually creating a dataframe. Pandas have a very easy syntax for reading files:\n",
     "\n",
     "    pd.read_*\n",
     "    \n",
@@ -356,7 +356,7 @@
     "We have 25,000 rows and 11 columns, that's a lot of data!\n",
     "\n",
     "## Writing files\n",
-    "Let's say we want to export this data into excel spreadsheet but we only want to export magnitude, latitude, longitude and depth columns:"
+    "Let's say we want to export this data as an excel spreadsheet but we only want to export magnitude, latitude, longitude and depth columns:"
    ]
   },
   {
@@ -398,7 +398,7 @@
    "metadata": {},
    "source": [
     "## Filtering, selecting and assigning\n",
-    "Looking at New Zealand earthquake DataFrame, we would like to filter it, so that we only use earthquakes since 2000 and magnitude higher than 5. To do that, we can create conditional expression:"
+    "Looking at New Zealand earthquake DataFrame, we would like to filter it, so that we only use earthquakes since 2000 and magnitude higher than 5. To do that, we can include a conditional expression:"
    ]
   },
   {
@@ -515,7 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pandas built-in function .isin([list of values we look for]) allows to select data whose specified values are in the given column. This function returns True/False. Isin can be used with:\n",
+    "Pandas' built-in function .isin([list of values we look for]) allows us to select data whose specified values are in the given column. This function returns True/False. Isin can be used with:\n",
     "    \n",
     "    df.loc[df.col1.isin([value1, value2, ...])]\n",
     "    \n",
@@ -821,7 +821,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These calculations are done at once for each row. That means, there is no need to loop over elements in the DataFrame, which makes it very efficient!"
+    "These calculations are done at once for each row. That means that there is no need to loop over elements in the DataFrame, which makes it very efficient!"
    ]
   },
   {
@@ -1018,7 +1018,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pandas also have separate built-in functions that can calculate these statistics, e.g. to get mean magnitude we can simply call:"
+    "Pandas also has separate built-in functions that can calculate these statistics, e.g. to get mean magnitude we can simply call:"
    ]
   },
   {
@@ -1154,7 +1154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we would like to join the original 'nz_eqs' and 'nz_eqs2' DataFrames by common columns. We can use merge function that takes two DataFrames as attributes and we can decided which columns to merge with. For example, if we choose to merge with latitude, longitude, the final DataFrame would have two columns depth_km_x and depth_km_y for the same name columns in original DataFrames. If we wanted to merge DataFrames with three common columns, we can use:"
+    "Now, we would like to join the original 'nz_eqs' and 'nz_eqs2' DataFrames by common columns. We can use merge function that takes two DataFrames as arguments and we can decided which columns to merge with. In our case, nz_eqs and nz_eqs2 share three data columns: lat, lon, depth_km. If we choose to merge with latitude, longitude, the final DataFrame would keep depth_km columns from both DataFrames, named depth_km_x and depth_km_y. If we wanted to merge DataFrames with all three common columns, we can use:"
    ]
   },
   {
@@ -1305,8 +1305,8 @@
     }
    ],
    "source": [
-    "nz_eqs_merged = pd.merge(nz_eqs, nz_eqs2, how=\"left\", left_on=[\"lat\", \"lon\", \"depth_km\"],\n",
-    "                        right_on=[\"lat\", \"lon\",\"depth_km\"])\n",
+    "nz_eqs_merged = pd.merge(nz_eqs, nz_eqs2, how=\"left\",\n",
+    "                         on=[\"lat\", \"lon\", \"depth_km\"])\n",
     "\n",
     "nz_eqs_merged.head()"
    ]
@@ -1316,7 +1316,7 @@
    "metadata": {},
    "source": [
     "## Combining\n",
-    "If we want to join the same data from two tables, we can use concat() function. Let's split original data into two DataFrames and try to combine them back together:"
+    "If we want to join the same data from two tables, we can use the concat() function. Let's split the original data into two DataFrames and try to combine them back together:"
    ]
   },
   {
@@ -1353,8 +1353,10 @@
     "nz_eqs_concat_unique = nz_eqs_concat.drop_duplicates()\n",
     "\n",
     "print(\"Original DataFrame shape:\", nz_eqs.shape)\n",
-    "print(\"Concatenated DataFrame with duplicates shape:\", nz_eqs_concat.shape)\n",
-    "print(\"Concatenated DataFrame without duplicates shape:\", nz_eqs_concat_unique.shape)"
+    "print(\"Concatenated DataFrame with duplicates shape:\",\n",
+    "      nz_eqs_concat.shape)\n",
+    "print(\"Concatenated DataFrame without duplicates shape:\",\n",
+    "      nz_eqs_concat_unique.shape)"
    ]
   },
   {
@@ -1404,7 +1406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This analysis is equivalent also to pandas built-in value_counts() function:"
+    "This analysis is also equivalent to pandas built-in value_counts() function:"
    ]
   },
   {
@@ -1651,7 +1653,7 @@
    "source": [
     "## Creating date-time stamps\n",
     "\n",
-    "Let's create columns with hours, minutes and seconds from utc_time column in format:\n",
+    "Let's create columns with hours, minutes and seconds from utc_time column (contains strings) in format:\n",
     "\n",
     "    HH:MM:SS\n",
     "    \n",
