--- a/notebooks/coding/Sets.ipynb
+++ b/notebooks/coding/Sets.ipynb
@@ -5,17 +5,17 @@
    "metadata": {},
    "source": [
     "# Sets\n",
-    "Set is Python container, they can only contain one copy of particular element. They are equivalent to sets in maths. They don't have indices or keys. They are not ordered. Elements in a set can be of any type.\n",
+    "Sets are a type of Python container that are equivalent to sets in maths. They can only contain one copy of a particular element and they are not ordered. They don't have indices or keys. Elements in a set can be of any type.\n",
     "\n",
     "Sets are defined with curly brackets:\n",
     "\n",
     "    set1 = {variable1, variable2, variable3, etc...}\n",
-    "Sets only contain one copy of the same element, so even though we specify it twice, set returns it once:"
+    "Sets only contain one copy of the same element, so even though we specify it twice, a set stores it once:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,22 +37,22 @@
    "source": [
     "We can see that the values are returned in no particular order.\n",
     "\n",
-    "Sets cannot be added together with simple addition method like lists. They cannot be sliced or indexed. Operations that can be done on a set:"
+    "Sets cannot be added together with simple addition method like lists can. They cannot be sliced or indexed. Operations that can be done on a set:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'carrot', 'banana', 'potato'}\n",
+      "{'banana', 'carrot', 'potato'}\n",
       "True\n",
       "None\n",
-      "{'carrot', 'cucumber', 4, 5, 'banana', 'potato'}\n",
+      "{4, 5, 'potato', 'cucumber', 'carrot', 'banana'}\n",
       "set()\n"
      ]
     }
