--- a/notebooks/geosciences/Cartography_Cartopy.ipynb
+++ b/notebooks/geosciences/Cartography_Cartopy.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating maps in Cartopy\n",
+    "\n",
+    "In this notebook we will learn how to create maps using [*Cartopy*](https://scitools.org.uk/cartopy/) package for Python.\n",
+    "\n",
+    "The package uses standard Matplotlib engine to generate plots, which makes it very easy to personalise them."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -28,25 +39,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating maps in Cartopy\n",
-    "\n",
-    "In this notebook we will learn how to create maps using [*Cartopy*](https://scitools.org.uk/cartopy/) package for Python.\n",
-    "\n",
-    "The package uses stadard Matplotlib engine to generate the plots, which makes it very easy to personalise them."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Map projections in Cartopy\n",
     "\n",
     "Full list of projections is available at https://scitools.org.uk/cartopy/docs/latest/crs/projections.html.\n",
     "\n",
     "**Useful map projections:**\n",
-    "- Equirectangular projection - conserves distances along meridians, plate carrée projection uses equator as a standard parallel.\n",
+    "- Equirectangular projection - conserves distances along meridians, plate carrée projection uses the equator as the standard parallel.\n",
     "  \n",
-    "- Mercator projection - preserves angles and shapes of small objects, but inflates areas away from equator.\n",
+    "- Mercator projection - preserves angles and shapes of small objects, but inflates areas away from the equator.\n",
     "\n",
     "- Equidistant conic projection - useful for East-West elongated countries.\n",
     "\n",
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Map of Antartica can be created using SouthPolarStereo(), which is an azimuthal equidistant projection. In the previous example, we were using Natural Earth relief image for each map. In this example, we are using *ax.add_features()* that allows to customise features such as ocean, land, rivers, lakes and country borders."
+    "Map of Antarctica can be created using SouthPolarStereo(), which is an azimuthal equidistant projection. In the previous example, we were using Natural Earth relief image for each map. In this example, we are using *ax.add_features()* that allows us to customise features such as ocean, land, rivers, lakes and country borders."
    ]
   },
   {
@@ -197,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can plot the data using *scatter()* class:"
+    "We can plot the data using the *scatter()* function:"
    ]
   },
   {
@@ -229,7 +229,8 @@
     "ax.set_title(\"Scatter map of UK and Ireland\")\n",
     "\n",
     "# Create a scatter plot\n",
-    "scatplot = ax.scatter(X, Y, c=Z, cmap=\"jet\", transform=ccrs.PlateCarree())\n",
+    "scatplot = ax.scatter(X, Y, c=Z, cmap=\"jet\",\n",
+    "                      transform=ccrs.PlateCarree())\n",
     "\n",
     "# Create colourbar\n",
     "cbar = plt.colorbar(scatplot, ax=ax, fraction=0.046,\n",
@@ -367,7 +368,8 @@
     "\n",
     "X, Y = np.meshgrid(x,y)\n",
     "\n",
-    "# Generate horizontal and vertical values of vector components\n",
+    "# Generate horizontal and vertical\n",
+    "# values of vector components\n",
     "U = X * np.cos(X) - Y * np.cos(Y)\n",
     "V = X * np.sin(X) - Y * np.sin(Y)"
    ]
@@ -376,7 +378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cartopy only allows to create quiver plots for PlateCarree() or rotated pole projections. It does not work for Marcator projection. In this example, we will use the same projection as we used for bathymetry plots:"
+    "Cartopy only allows creating quiver plots for PlateCarree() or rotated pole projections. It does not work for Marcator projection. In this example, we will use the same projection as we used for bathymetry plots:"
    ]
   },
   {
@@ -438,11 +440,11 @@
     "\n",
     "California lies at a transform fault boundary between the Pacific and the North American plates. This boundary is characterised by predominant horizontal motion between the plates.\n",
     "\n",
-    "According to [HS3-NUVELl1A](https://www.unavco.org/software/geodetic-utilities/plate-motion-calculator/plate-motion-calculator.html) plate velocity model, the Pacific plate at (35$^\\circ$N, 120$^\\circ$W) moves at 46.13 mm/yr relative to stationary American plate (azimuth = 322.64$^\\circ$). The northern and eastern components of the motion are at 36.77 mm/yr and -27.99 mm/yr, respectively.\n",
+    "According to [HS3-NUVELl1A](https://www.unavco.org/software/geodetic-utilities/plate-motion-calculator/plate-motion-calculator.html) plate velocity model, the Pacific plate at (35$^\\circ$N, 120$^\\circ$W) moves at 46.13 mm/yr relative to stationary American plate (azimuth = 322.64$^\\circ$). The northern and eastern components of the motion are 36.77 mm/yr and -27.99 mm/yr, respectively.\n",
     "\n",
-    "In this example, we will visualise California state, and parts that lie within Pacific and American plates. We will also visually investigate how long could it theoretically take Los Angeles (33.9416$^\\circ$N) to reach San Francisco latitude (37.7749$^\\circ$N).\n",
+    "In this example, we will visualise the California state and parts that lie within Pacific and American plates. We will also visually investigate how long it could theoretically take Los Angeles (33.9416$^\\circ$N) to reach San Francisco latitude (37.7749$^\\circ$N).\n",
     "\n",
-    "First, we downloaded California state boundary shapefile from https://data.ca.gov/dataset/ca-geographic-boundaries and tectonic plate boundaries from https://www.usgs.gov/media/files/plate-boundaries-kmz-file and edited the files to create North American and Pacific plate parts of the state.\n",
+    "First, we downloaded California state boundary shapefile from [ca.gov](https://data.ca.gov/dataset/ca-geographic-boundaries) and tectonic plate boundaries from [USGS](https://www.usgs.gov/media/files/plate-boundaries-kmz-file) and edited the files to create North American and Pacific plate parts of the state.\n",
     "\n",
     "The functions below will be used to plot shapefiles in cartopy:"
    ]
