--- a/notebooks/coding/If_statement.ipynb
+++ b/notebooks/coding/If_statement.ipynb
@@ -17,7 +17,7 @@
     "        \n",
     "_elif_ and _else_ are optional blocks. Code inside each block needs to be indented.\n",
     "\n",
-    "### Example use:"
+    "## Example use:"
    ]
   },
   {
@@ -29,7 +29,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 is less than 12.\n"
+      "10 is less than 12.\n",
+      "0\n"
      ]
     }
    ],
@@ -41,7 +42,11 @@
     "elif number < 12:\n",
     "    print(\"%g is less than 12.\" % (number))\n",
     "else:\n",
-    "    print(\"%g is greater or equal to 12.\" % (number))"
+    "    print(\"%g is greater or equal to 12.\" % (number))\n",
+    "    \n",
+    "# If statements in one line\n",
+    "a = 1 if number == 5 else 0\n",
+    "print(a)"
    ]
   }
  ],
