--- a/notebooks/coding/Lists.ipynb
+++ b/notebooks/coding/Lists.ipynb
@@ -5,16 +5,16 @@
    "metadata": {},
    "source": [
     "# Lists\n",
-    "List is an object that contains multiple elements in defined order (referred to as index number). The syntax is:\n",
+    "A list is an object that contains multiple elements in defined order (referred to as index number). The syntax is:\n",
     "\n",
     "    l = [element1, element2, element3, element4, etc..]\n",
     "    \n",
-    "To print specific elements or part of the list, we can use slicing syntax:"
+    "To extract a specific element or part of the list, we can use slicing syntax:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
    "source": [
     "l = [1, 3, 5, 9, 7, 11]\n",
     "\n",
-    "print(len(l))  # Prints the number of elements\n",
+    "print(len(l))  # Prints the number of elements in the list\n",
     "\n",
     "l.append(13)   # Appends 13 at the end of the list\n",
     "print(l)\n",
@@ -124,15 +124,15 @@
     "print(min(l)) # Returns minimum value in the list\n",
     "print(max(l)) # Returns maximum value in the list\n",
     "\n",
-    "print(sum(l)) # Adds elements of the list\n",
+    "print(sum(l)) # Sums up elements of the list\n",
     "\n",
-    "l = l + [17, 19] # Adds a list at the end of l\n",
+    "l = l + [17, 19] # Adds a list [17, 19] at the end of l\n",
     "print(l)\n",
     "\n",
     "l.insert(2, 305) # Insert at index 2, number 305\n",
     "print(l)\n",
     "\n",
-    "del l[2] # Delete the element we inserted\n",
+    "del l[2] # Delete the element we inserted at index 2\n",
     "print(l)\n",
     "\n",
     "print(l.index(11)) # Return what index value 11 has\n",
