--- a/notebooks/coding/Tuples.ipynb
+++ b/notebooks/coding/Tuples.ipynb
@@ -5,27 +5,37 @@
    "metadata": {},
    "source": [
     "# Tuples\n",
-    "Tuples are constant lists, they can be used like lists but cannot be modified (they are immutable). They are used for returning multiple values from functions. They are created like lists, but with round brackets:\n",
+    "Tuples are constant lists. They can be used like lists to store data but they cannot be modified (they are immutable). They are used for storing multiple values from functions. They are created like lists, but with round brackets:\n",
     "\n",
     "    tuple1 = (variable1, variable2, variable3)\n",
     "   \n",
-    "Tuples can have as many elements as you want and they don't have to be of the same type. Tuples are used for example i string formatting syntax:\n",
+    "Tuples can have as many elements as you want and they don't have to be of the same type. Tuples are used, for example, in string formatting syntax:\n",
     "    \n",
     "    print(\"text %g, %g\" % (no1, no2)) # (no1, no2) is a tuple\n",
     "    \n",
-    "For functions that return multiple values, values from tuples can be extract with this syntax:\n",
+    "For functions that return multiple values, values from tuples can be extracted with this syntax:\n",
     "\n",
     "    value1, value2 = function1(some_variable)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temp.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "t = (2, 4, 6, 'temp.pdf')   # Create a tuple.\n",
-    "t =  2, 4, 6, 'temp.pdf'    # Create a tuple, without bracket"
+    "t =  2, 4, 6, 'temp.pdf'    # Create a tuple, without bracket\n",
+    "\n",
+    "print(t[3])                 # Indexing as usual"
    ]
   },
   {
