--- a/notebooks/coding/Variables.ipynb
+++ b/notebooks/coding/Variables.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "# Variables\n",
     "\n",
-    "Variable is an object that contains an assigned value:"
+    "A variable is an object that contains an assigned value:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +39,33 @@
     "- _float_ - floating point numbers, e.g. 5.0, 5.2\n",
     "- _bool_ - boolean value, i.e. True or False\n",
     "\n",
-    "Integer and floating point are different variables because of how computer stores them. Floats are approximations to any real number in an exponent format with a base 2 (e.g., $0.5678\\times2^5$). Integers are whole numbers. \n",
-    "\n",
-    "To check what variable type we have, we can use in-built _type()_ function that takes the variable as an argument:\n"
+    "Integer and floating point numbers are different variables because of how a computer stores them. Computers use a discrete representation of numbers, which means that there is a gap between two adjacent numbers. For integers this gap is 1 and for floats it is much much smaller. For example, in integer arithmetic 0 and 0.999999 are the same numbers. We will therefore almost always use floating point numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(0.99999999)\n",
+    "b = int(1.00000001)\n",
+    "print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To check what type a variable is, we can use the in-built _type()_ function that takes the variable as an argument:"
    ]
   },
   {
@@ -78,7 +102,7 @@
    "source": [
     "## Operations on variables\n",
     "### Numbers\n",
-    "Changing types between integer and float:"
+    "An integer-type variable will automatically change to float if it is required for mathematical accuracy:"
    ]
   },
   {
@@ -115,7 +139,7 @@
    "source": [
     "We can make calculations on numbers stored in variables and program mathematical formulae. For example, a position for a ball in vertical motion is given by:\n",
     "     $$ y(t) = v_0t- \\frac{1}{2}gt^2 $$\n",
-    "where ball starts at $y=0$ at time $t=0$ and:\n",
+    "where the ball starts at $y=0$ at time $t=0$ and:\n",
     "\n",
     "* $y$ is the height (position) as a function of time $t$\n",
     "* $v_0$ is the initial velocity (at $t=0$)\n",
@@ -170,7 +194,7 @@
    "source": [
     "a = \"some text\"            # A string\n",
     "print(a, type(a))\n",
-    "a = a + \" and more text\"   # Add ' and more text' string at the end of 'a'\n",
+    "a = a + \" and more text\"   # Add a string at the end of 'a'\n",
     "print(a, type(a))"
    ]
   },
@@ -178,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can slice strings to get specific parts of them by using following syntax:"
+    "You can slice strings to get specific parts of them by using the following syntax:"
    ]
   },
   {
@@ -197,9 +221,16 @@
     }
    ],
    "source": [
-    "print(a[0:2])    # Print characters 0, 1 excluding 2 (Python counts from zero!!!)\n",
-    "print(a[0:-2])   # Print all characters but last two\n",
-    "print(a[0:10:2]) # Print every second character from first 10 characters"
+    "# Print characters 0, 1 excluding 2\n",
+    "# (Python counts from zero!!!)\n",
+    "print(a[0:2])\n",
+    "\n",
+    "# Print all characters but last two\n",
+    "print(a[0:-2])\n",
+    "\n",
+    "# Print every second character\n",
+    "# from first 10 characters\n",
+    "print(a[0:10:2])"
    ]
   },
   {
@@ -279,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Other useful funcitons:"
+    "Other useful functions:"
    ]
   },
   {
@@ -394,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compound conditions can be also used:"
+    "Compound conditions with logical operators can also be used:"
    ]
   },
   {
