--- a/notebooks/coding/While_loops.ipynb
+++ b/notebooks/coding/While_loops.ipynb
@@ -13,7 +13,7 @@
     "        \n",
     "    # Some more code to be executed once the while loop is over, executed once\n",
     "    \n",
-    "Some _while_ loops are infinite, where condition never becomes **False**. A _while_ loop, similar to _if_ statements, needs the code to be indented."
+    "Some _while_ loops are infinite, where the condition never becomes **False**. A _while_ loop, similar to _if_ statements, needs the code to be indented."
    ]
   },
   {
@@ -60,7 +60,10 @@
     "print(\"\\nEntering while loop\")\n",
     "\n",
     "while counter <= 10:\n",
-    "    counter = counter + 1 # Add one to the counter until is equal to 10\n",
+    "    \n",
+    "    # Add one to the counter until it is equal to 10\n",
+    "    counter = counter + 1\n",
+    "    \n",
     "    print(counter)\n",
     "    \n",
     "print(\"While loop finished.\\n\")\n",
@@ -74,11 +77,7 @@
    "source": [
     "## Exercise:\n",
     "\n",
-    "Fahrenheit-Celsius conversion is:\n",
-    "\n",
-    "$$ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32) $$\n",
-    "\n",
-    "Create a _while_ loop to find Celsius temperatures for Fahrenheit temperature between 20$^\\circ$F and 80$^\\circ$F at 5$^\\circ$F increments."
+    "Create a _while_ loop to find Celsius temperatures for Fahrenheit temperatures between 20$^\\circ$F and 80$^\\circ$F at 5$^\\circ$F increments. The Fahrenheit-Celsius conversion formula is: $$ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32) $$"
    ]
   },
   {
