Add reviewed changed to GFD notebooks

--- a/notebooks/geosciences/Wave_dispersion.ipynb
+++ b/notebooks/geosciences/Wave_dispersion.ipynb
@@ -147,13 +147,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Deep water waves that have gratest wavelength travel fastest.\n",
+    "Deep water waves that have greatest wavelength travel fastest.\n",
     "\n",
-    "The separation of waves by virtue of their differing rates of travel is known as **wave dispersion** and dispersion equation/relation\n",
+    "The separation of waves by virtue of their differing rates of travel is known as **wave dispersion** and the dispersion equation/relation\n",
     "$$c=\\sqrt{\\frac{g}{k}}=\\sqrt{\\frac{g\\lambda}{2\\pi}}=\\frac{gT}{2\\pi}$$\n",
-    "shows that waves of longer wavelength travel faster than shorter wavelength until we reach limit which applies for shallow water or long waves.\n",
+    "shows that waves of longer wavelength travel faster than shorter wavelength until we reach the  limit which applies for shallow water or long waves.\n",
     "\n",
-    "**Group velocity** (group speed) is the velocity that wave envelope travels with. **Phase velocity** is velocity of any one frquency component of the wave.\n",
+    "**Group velocity** (group speed) is the velocity that the wave envelope travels with. **Phase velocity** is the velocity of any one frequency component of the wave.\n",
     "\n",
     "To illustrate that, we can plot two waves that are shifted and see what their superposition looks like:"
    ]
@@ -7411,9 +7411,9 @@
     "Group speed can be expressed as:\n",
     "$$c_g = \\frac{1}{2}\\frac{\\omega}{k}\\Big[1+\\frac{4kH}{e^{2kd}-e^{-2kd}}\\Big].$$\n",
     "\n",
-    "The two component wave trains interact, each loosing individual identity and combine into series of wave groups.\n",
+    "The two component wave trains interact, each losing their individual identity and combine into series of wave groups.\n",
     "\n",
-    "Wave group advances slower than individual waves in the group. In deep water group speed is hald the average phase speed of the two wave trains, in shallow water it is the same as the pjase speed."
+    "The wave group advances slower than the individual waves in the group. In deep water group speed is half the average phase speed of the two wave trains, in shallow water it is the same as the phase speed."
    ]
   },
   {
