added section on google earth database
Signed-off-by: Adriaensen <ra2617@ic.ac.uk>

--- a/notebooks/geosciences/Google_Earth_Engine_Getting_Started.ipynb
+++ b/notebooks/geosciences/Google_Earth_Engine_Getting_Started.ipynb
@@ -117,6 +117,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Google Earth Engine Database\n",
+    "the [GEE database](https://earthengine.google.com) contains a variety of dataset that can be called within your scripts and be processed on the cloud. Before trying to call a dataset it is recommend to first look through the website. \n",
+    "For each dataset there is also a few lines of code provided showing how to best access it and best colour palettes to be used."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "###  General Guidance "
    ]
   },
