--- a/notebooks/geosciences/Google_Earth_Engine_Getting_Started_.ipynb
+++ b/notebooks/geosciences/Google_Earth_Engine_Getting_Started_.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,28 +63,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6f6bba5af014db5adc17deb93fcee7c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[40, -100], controls=(WidgetControl(options=['position'], widget=HBox(children=(ToggleButton(value=…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# test by creating basemap\n",
     "Map = geemap.Map(center=[40,-100], zoom=4,)\n",
     "Map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"UROP/GEE_Getting_started/1.png\" style=\"100%;\"/>"
    ]
   },
   {
