--- a/_sources/geosciences/Google_Earth_Engine_Foundations_.ipynb
+++ b/_sources/geosciences/Google_Earth_Engine_Foundations_.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +50,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6cf0352e879d4d74886486c1a060aeb1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[40, -100], controls=(WidgetControl(options=['position'], widget=HBox(children=(ToggleButton(value=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#set map\n",
     "Map = geemap.Map(center=[40,-100], zoom=4)\n",
@@ -88,6 +103,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"UROP/GEE_Foundations/1.png\" style=\"100%;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Visualise Specific Bands\n",
     "Remember multiple bands are displayed as RGB to our eyes."
    ]
@@ -106,6 +128,13 @@
     "Map.centerObject(image, 7)\n",
     "Map.addLayer(image, vizParams, 'Landsat 8 False color')\n",
     "Map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"UROP/GEE_Foundations/2.png\" style=\"100%;\"/>"
    ]
   },
   {
@@ -191,14 +220,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"UROP/GEE_Foundations/4.png\" style=\"100%;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Apply Band Math To An Image Collection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['B1', 'B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B8', 'B9', 'B10', 'B11', 'BQA']\n",
+      "['B1', 'B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B8', 'B9', 'B10', 'B11', 'BQA', 'nd']\n"
+     ]
+    }
+   ],
    "source": [
     "# Add Earth Engine dataset\n",
     "point = ee.Geometry.Point(-122.262, 37.8719)\n",
@@ -261,14 +306,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"UROP/GEE_Foundations/5.png\" style=\"100%;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Obtain Image Statistics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'B1': 0.10156726419256697, 'B10': 288.3898316688731, 'B11': 287.4496961587173, 'B2': 0.07771978773589312, 'B3': 0.05530074222374056, 'B4': 0.03670883505442356, 'B5': 0.22139764553479283, 'B6': 0.07888235294207073, 'B7': 0.035089536963059234, 'B8': 0.047100656968120116, 'B9': 0.00156092084691453, 'BQA': 2720.11945357173}\n"
+     ]
+    }
+   ],
    "source": [
     "# Add Earth Engine dataset\n",
     "image = ee.Image('LANDSAT/LC08/C01/T1_TOA/LC08_044034_20140318')\n",
@@ -288,6 +348,13 @@
     "\n",
     "print(mean.getInfo())\n",
     "Map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"UROP/GEE_Foundations/6.png\" style=\"100%;\"/>"
    ]
   },
   {
@@ -338,6 +405,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"UROP/GEE_Foundations/7.png\" style=\"100%;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Inbuild CloudScore Function"
    ]
   },
@@ -367,6 +441,16 @@
     "vis = {'bands': ['B5', 'B4', 'B3'], 'max': 0.3}\n",
     "Map.addLayer(median,vis)\n",
     "Map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With CloudMask function:\n",
+    "<img src=\"UROP/GEE_Foundations/8.png\" style=\"50%\"/>\n",
+    "Without CloudMask function:\n",
+    "<img src=\"UROP/GEE_Foundations/9.png\" style=\"50%\"/>"
    ]
   },
   {
