--- a/notebooks/mathematics/linear algebra/Eigenvalues_and_eigenvectors.ipynb
+++ b/notebooks/mathematics/linear algebra/Eigenvalues_and_eigenvectors.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "The above example has two eigenvectors: $\\mathbf{v}_1 = (1, 1)^T$ and $\\mathbf{v}_2 = (1, -1)^T$ with respective eigenvalues $\\lambda_1 = 3$ and $\\lambda = 1$. The figure below shows the effect of this transformation on point coordinates in the plane. Notice how the blue and purple vectors (which are parallel to eigenvectors) have their directions preserved, while every otherwise oriented vector (e.g. red vectors) are rotated.\n",
     "\n",
-    "```{figure} linalgdata/Eigenvectorsgif.gif\n",
+    "```{figure} ./linalgdata/Eigenvectorsgif.gif\n",
     "---\n",
     "name: eigvectors\n",
     "---\n",
@@ -365,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{figure} linalgdata/fibonacci.gif\n",
+    "```{figure} ./linalgdata/fibonacci.gif\n",
     "---\n",
     "name: fibonacci\n",
     "---\n",
