--- a/_sources/mathematics/linear_algebra/Theory.ipynb
+++ b/_sources/mathematics/linear_algebra/Theory.ipynb
@@ -149,7 +149,7 @@
     "\n",
     "Let us go back to a matrix-vector multiplication we considered at the end of the first notebook. Some may remember this figure:\n",
     "\n",
-    "<img src=\"./linalgdata/chofbasis.png\" width=\"400\">\n",
+    "<img src=\"linalgdata/chofbasis.png\" width=\"400\">\n",
     "\n",
     "We considered a general matrix left-multiplying the basis vectors. Let us recall what we found:\n",
     "\n",
@@ -318,7 +318,7 @@
     "\n",
     "which is the difference between the product of the diagonal elements and the product of the off-diagonal elements. Notice that the determinant of a $2 \\times 2$ matrix is the area of the parallelogram bounded by its column-vectors.\n",
     "\n",
-    "<img src=\"./linalgdata/parallelogram.png\" width=\"300\">\n",
+    "<img src=\"linalgdata/parallelogram.png\" width=\"300\">\n",
     "\n",
     "**3.** The determinant of a $3 \\times 3$ matrix is the number:\n",
     "\n",
@@ -448,7 +448,7 @@
     "\n",
     "This is illustrated on the figure below, showing unit circles (set of all vectors of norm 1) in $\\mathbb{R}^2$ in different p-norms. That is, a vector from the origin to any point situated on the circle has a norm of 1 calculated in the corresponding p-norm. Modified from [Wikipedia](https://en.wikipedia.org/wiki/Norm_(mathematics)).\n",
     "\n",
-    "<img src=\"./linalgdata/norms.png\">\n",
+    "<img src=\"linalgdata/norms.png\">\n",
     "\n",
     "### Examples\n",
     "\n",
@@ -458,7 +458,7 @@
     "\\lVert \\mathbf{x} \\rVert_2 = \\sqrt{|3|^2 + |{-4}|^2} = 5 \\\\\n",
     "\\lVert \\mathbf{x} \\rVert_\\infty = \\max(|3|, |{-4}|) = 4.$$\n",
     "\n",
-    "<img src=\"./linalgdata/vectornorms2.png\" style=\"width: 200px;\">\n",
+    "<img src=\"linalgdata/vectornorms2.png\" style=\"width: 200px;\">\n",
     "\n",
     "While $\\lVert \\mathbf{x} \\rVert_1$ is defined as the unique Euclidean distance between two points, $\\lVert \\mathbf{x} \\rVert_1$ is not unique.\n",
     "\n",
